# oreka

./: .gitignore
.devcontainer/: devcontainer.json
orkaudio/: Makefile.am  OrkAudio.cpp  configure.in
orkaudio/audiocaptureplugins/voip/: SipParsers.cpp  VoIp.cpp  VoIpSession.cpp  VoIpSession.h
orkaudio/filters/: Makefile.am
orkaudio/filters/LiveStream/: LiveStreamConfig.cpp  LiveStreamConfig.h  LiveStreamFilter.cpp  LiveStreamFilter.h
orkaudio/filters/srt/: Makefile.am  SRTConfig.cpp  SRTConfig.h  SRTFilter.cpp  SRTFilter.h  SimpleThreadPool.cpp  SimpleThreadPool.hpp
orkbasecxx/: CapturePort.cpp  Config.cpp  Config.h  Filter.cpp  Filter.h  LogManager.cpp  LogManager.h  configure.in
orkbasecxx/audiofile/: opus_header.cpp
