
AC_INIT([orkaudio], [1.0])
AM_CONFIG_HEADER(xconfig.h)
AM_INIT_AUTOMAKE([subdir-objects])

speex_lib=speex

AC_ARG_ENABLE( [tsan],
	AS_HELP_STRING([--enable-tsan], [enable thread sanitizer])
)
AC_ARG_ENABLE( [asan],
	AS_HELP_STRING([--enable-asan], [enable address sanitizer])
)

AC_LANG_CPLUSPLUS
AC_PROG_CXX
AM_PROG_LIBTOOL

PKG_CHECK_MODULES([PROTOBUF], [protobuf], [], [])
PKG_CHECK_MODULES([OPENTELEMETRY_EXPORTER_OTLP_FILE_CLIENT], [opentelemetry_exporter_otlp_file_client])
PKG_CHECK_MODULES([OPENTELEMETRY_EXPORTER_OTLP_FILE], [opentelemetry_exporter_otlp_file])
PKG_CHECK_MODULES([OPENTELEMETRY_EXPORTER_OTLP_FILE_LOG], [opentelemetry_exporter_otlp_file_log])
PKG_CHECK_MODULES([OPENTELEMETRY_EXPORTER_OTLP_FILE_METRIC], [opentelemetry_exporter_otlp_file_metric])
PKG_CHECK_MODULES([OPENTELEMETRY_EXPORTER_OTLP_GRPC_CLIENT], [opentelemetry_exporter_otlp_grpc_client])
PKG_CHECK_MODULES([OPENTELEMETRY_EXPORTER_OTLP_GRPC], [opentelemetry_exporter_otlp_grpc])
PKG_CHECK_MODULES([OPENTELEMETRY_EXPORTER_OTLP_GRPC_LOG], [opentelemetry_exporter_otlp_grpc_log])
PKG_CHECK_MODULES([OPENTELEMETRY_EXPORTER_OTLP_GRPC_METRICS], [opentelemetry_exporter_otlp_grpc_metrics])
PKG_CHECK_MODULES([OPENTELEMETRY_EXPORTER_OTLP_HTTP_CLIENT], [opentelemetry_exporter_otlp_http_client])
PKG_CHECK_MODULES([OPENTELEMETRY_EXPORTER_OTLP_HTTP], [opentelemetry_exporter_otlp_http])
PKG_CHECK_MODULES([OPENTELEMETRY_EXPORTER_OTLP_HTTP_LOG], [opentelemetry_exporter_otlp_http_log])
PKG_CHECK_MODULES([OPENTELEMETRY_EXPORTER_OTLP_HTTP_METRIC], [opentelemetry_exporter_otlp_http_metric])
PKG_CHECK_MODULES([OPENTELEMETRY_API], [opentelemetry_api])
PKG_CHECK_MODULES([OPENTELEMETRY_SDK], [opentelemetry_sdk])
PKG_CHECK_MODULES([OPENTELEMETRY_EXT], [opentelemetry_ext])
PKG_CHECK_MODULES([OPENTELEMETRY_TRACE], [opentelemetry_trace])
PKG_CHECK_MODULES([OPENTELEMETRY_LOGS], [opentelemetry_logs])
PKG_CHECK_MODULES([OPENTELEMETRY_METRICS], [opentelemetry_metrics])
PKG_CHECK_MODULES([OPENTELEMETRY_COMMON], [opentelemetry_common])
PKG_CHECK_MODULES([OPENTELEMETRY_PROTO], [opentelemetry_proto])
PKG_CHECK_MODULES([ABSL_LOG], [absl_log])


AS_IF([test "x$enable_tsan" = "xyes"], [
	CXXFLAGS+=" -fsanitize=thread "
	LDFLAGS+=" -fsanitize=thread "
])

AS_IF([test "x$enable_asan" = "xyes"], [
	CXXFLAGS+=" -fsanitize=address "
	LDFLAGS+=" -fsanitize=address "
])

# Check if gcc supports cpp11
if [echo "int main(){}" | $CXX -std=c++14 -xc++ -S -  &>/dev/null] ; then
	CXXFLAGS+=" -std=c++14 -DSUPPORTS_CPP11 -fPIC"
	LDFLAGS+=" -ldl"
else
	AC_MSG_FAILURE("Compiler must support C++ 14")
fi

# don't support TLS under Centos 6
if [! grep "release 6" /etc/redhat-release]; then
    CXXFLAGS+=" -DSUPPORT_TLS_SERVER -DSUPPORT_TLS_CLIENT"
fi

if [ egrep -i "release [67]" /etc/redhat-release ]; then
	speex_lib=orkspeex
fi

AM_PROG_LIBTOOL
AC_SEARCH_LIBS([dwarf_begin],[dw],[][
	LDFLAGS+=" -ldw"
], AC_MSG_ERROR([libdw is not installed.]))

AC_SEARCH_LIBS([unw_backtrace],[unwind],[][
	LDFLAGS+=" -lunwind"
], AC_MSG_ERROR([libunwind is not installed.]))

AC_PREFIX_DEFAULT(/usr)

AC_SUBST(speex_lib,$speex_lib)

AC_OUTPUT(Makefile audiocaptureplugins/Makefile audiocaptureplugins/generator/Makefile audiocaptureplugins/voip/Makefile filters/Makefile filters/rtpmixer/Makefile filters/silkcodec/Makefile filters/g729codec/Makefile filters/LiveStream/Makefile filters/srt/Makefile)

echo ""
echo "========= Configuration ==========="
echo ""
echo "     cxx : $CXX"
echo "cxxflags : $CXXFLAGS"
echo " ldflags : $LDFLAGS"
echo "   speex : $speex_lib"
echo ""
echo "==================================="
